Bug 430086 - Compress entry not displayed when multiple zips are selected
Summary: Compress entry not displayed when multiple zips are selected
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
: 409878 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-12-06 16:36 UTC by amxmodx.unloco
Modified: 2021-01-18 11:07 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.2
Sentry Crash Report:


Attachments
Compress entry not displayed (52.72 KB, image/png)
2020-12-06 16:36 UTC, amxmodx.unloco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description amxmodx.unloco 2020-12-06 16:36:07 UTC
Created attachment 133905 [details]
Compress entry not displayed

SUMMARY
When selecting 2 zips, the option to compress is not displayed

STEPS TO REPRODUCE
1. Select 2 zip files and right click
2. The compress option is not present
3. You need to add a dummy file with a type other than zip to the selection

OBSERVED RESULT


EXPECTED RESULT
The compress option should be present to allow compressing multiple zips

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KUBUNTU 20.10
(available in About System)
KDE Plasma Version: Plasma 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Comment 1 Elvis Angelaccio 2020-12-28 18:34:55 UTC
This is currently by design, but it could be changed when 2 or more zips are selected.
Comment 2 Elvis Angelaccio 2021-01-14 22:07:14 UTC
Git commit f3055fa41e6eea735a0f9c4d82c80c57b7a43e53 by Elvis Angelaccio.
Committed on 14/01/2021 at 22:05.
Pushed by elvisangelaccio into branch 'release/20.12'.

Show 'Compress' menu on multiple selected archives of the same type

We already show the Compress menu if multiple archives of different
formats are selected. It doesn't make much sense to prevent the Compress
menu if the selected archives are of the same format instead.
FIXED-IN: 20.12.2

M  +3    -2    app/compressfileitemaction.cpp

https://invent.kde.org/utilities/ark/commit/f3055fa41e6eea735a0f9c4d82c80c57b7a43e53
Comment 3 amxmodx.unloco 2021-01-14 22:10:09 UTC
Thank you very much for the fix
Comment 4 Patrick Silva 2021-01-18 11:07:24 UTC
*** Bug 409878 has been marked as a duplicate of this bug. ***