Show 'Compress' menu on multiple selected archives of the same type

We already show the Compress menu if multiple archives of different
formats are selected. It doesn't make much sense to prevent the Compress
menu if the selected archives are of the same format instead.

BUG: 430086
FIXED-IN: 20.12.2